--- a/TravelRevewApp/TravelRevewApp.csproj
+++ b/TravelRevewApp/TravelRevewApp.csproj
@@ -175,6 +175,9 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="images\home_index\ClevelandSkyLine.jpg" />
+    <Content Include="images\home_index\DSCN0440.JPG" />
+    <Content Include="images\home_index\Mix 022.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
